--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <h3>Welcome to My Angular Form!</h3>
+
 <div class="actions">
   <button
     [routerLink]="['/template-driven-form']"
     routerLinkActive="router-link-active"
   >
-    Template Driven Form
+    Template Form
   </button>
   <button
     [routerLink]="['/reactive-form']"
@@ -13,4 +14,5 @@
     Reactive Form
   </button>
 </div>
+
 <router-outlet></router-outlet>
